# GA_Compiladors

./: CMakeLists.txt  README.md  build_and_run.sh  build_and_run_parser.sh  parser  prova.c  prova.cscn  prova_p3dbg.txt  test_parser.cscn  test_parser2.cscn  test_parser2_p3dbg.txt  test_parser_p3dbg.txt
Diagrames de Flux/: Data_Structures_Diagram.md  Flux_parser.ini  Input_Output_Diagram.md  scanner_flow.dot  whileif_sequence.md  whileif_sequence.mmd
src/: CMakeLists.txt  main.c
src/module_args/: module_args.c
src/module_comments_remove/: module_comments_remove.c  module_comments_remove.h
src/module_define/: module_define.c  module_define.h
src/module_errors/: module_errors.c
src/module_ifdef_endif/: CMakeLists.txt  module_ifdef_endif.c  module_ifdef_endif.h
src/module_include/: module_include.c  module_include.h
src/module_parser/: module_parser.c  module_parser.h
src/parser/: CMakeLists.txt  config.c  config.h  language.txt  language2.txt  main.c  main.h
src/parser/load_tokens/: CMakeLists.txt  module_load_tokens.c  module_load_tokens.h
src/parser/module_parser/: CMakeLists.txt  module_parser.c  module_parser.h
src/preprocessor/: CMakeLists.txt  main.c  main.h  utils_files.c
src/preprocessor/module_args/: module_args.h
src/preprocessor/module_comments_remove/: CMakeLists.txt  module_comments_remove.h
src/preprocessor/module_define/: CMakeLists.txt
src/preprocessor/module_errors/: CMakeLists.txt  module_errors.c  module_errors.h
src/preprocessor/module_ifdef_endif/: module_ifdef_endif.h
src/preprocessor/module_include/: CMakeLists.txt  module_include.c  module_include.h
src/preprocessor/module_macros/: CMakeLists.txt  module_macros.c  module_macros.h
src/preprocessor/module_parser/: CMakeLists.txt  module_parser.c
src/scanner/: CMakeLists.txt  config.c  config.h  count.c  count.h  main.c  main.h
src/scanner/module_automata/: CMakeLists.txt  define_automata.c  module_automata.c  module_automata.h
src/scanner/module_error/: CMakeLists.txt  module_error.c  module_error.h
src/scanner/module_init/: CMakeLists.txt  module_init.c  module_init.h
tests/: CMakeLists.txt  test_module_args.c  test_module_args.h  test_module_error.c  test_modules.h
